# Eureka

./: CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  pyproject.toml
backend/src/: app.py
backend/src/config/: __init__.py  database.py  settings.py
backend/src/controllers/: agent_controller.py  ai_config_controller.py  repository_controller.py  user_controller.py
backend/src/core/: __init__.py  crypto.py  exceptions.py  security.py  utils.py
backend/src/dependencies/: __init__.py  container.py
backend/src/models/: agent_run_model.py  ai_config_model.py  repository_model.py  user_model.py
backend/src/providers/ai/: __init__.py  agent.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  openrouter_provider.py  registry.py
backend/src/providers/github/: __init__.py  client.py  (+1 more)
backend/src/repositories/: agent_run_repository.py  ai_config_repository.py  base_repository.py  repository_repository.py  user_repository.py
backend/src/routes/: __init__.py  agent_routes.py  ai_config_routes.py  health_routes.py  repository_routes.py  user_routes.py
backend/src/schemas/: __init__.py  agent_schema.py  ai_config_schema.py  repository_schema.py  user_schema.py
backend/src/services/: agent_service.py  ai_config_service.py  repository_service.py  user_service.py
backend/tests/: conftest.py  test_agent_service.py  test_ai_config_service.py  test_ai_providers.py  test_crypto.py  test_github_service.py  test_github_url_parser.py  test_health.py  test_user_service.py
(+42 files in other folders)
