[project]
name = "eureka-backend"
version = "0.1.0"
description = "Eureka backend API — FastAPI service following a layered (routes -> controllers -> services -> repositories -> models) architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "motor>=3.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.1",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.29",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
